--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                     <img src="assets/images/pic_1.jpeg" class="w-100 img-thumbnail" alt="">
                   </div>
                   <div class="col-md-3">
-                    <img src="assets/images/pic_2.jpg" class="w-100 img-thumbnail" alt="">
+                    <img src="assets/images/pic_1.jpeg" class="w-100 img-thumbnail" alt="">
                   </div>
                   <div class="col-md-3">
-                    <img src="assets/images/pic_3.jpg" class="w-100 img-thumbnail" alt="">
+                    <img src="assets/images/pic_1.jpeg" class="w-100 img-thumbnail" alt="">
                   </div>
                   <div class="col-md-3">
-                    <img src="assets/images/pic_4.jpg" class="w-100 img-thumbnail" alt="">
+                    <img src="assets/images/pic_1.jpeg" class="w-100 img-thumbnail" alt="">
                   </div>
                 </div>
               </div>
