--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
 
-    <link href='http://cdn.webfont.youziku.com/webfonts/nomal/2330/45817/5aa2a175f629d91724646a3b.css' rel='stylesheet' type='text/css' />
+    <link href='https://cdn.webfont.youziku.com/webfonts/nomal/2330/45817/5aa2a175f629d91724646a3b.css' rel='stylesheet' type='text/css' />
 
     <link type='text/css' rel="stylesheet" href="assets/stylesheets/custom.css" />
     <link type='text/css' rel="stylesheet" href="assets/stylesheets/bootstrap.min.css" />
@@ -140,11 +140,6 @@
   <script>
     $("header").load("layouts/header.html");
     $("footer").load("layouts/footer.html");
-    $(function () {
-        if (getCookie(name) == "cn") {
-            $(".highlight").prepend("<div class='space'></div>")
-        }
-    })
   </script>
 </html>
 
