--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <div class="col-md-1"></div>
             <div class="col-md-4">
               <div class="highlight text-center">
-                <div class="title" data-localize="home.title"></div>
-                <div class="content text-center" data-localize="home.content"></div>
-                <a href="/about" onclick="scrollToSection('#about'); return false;" class="btn-about-us" data-localize="home.button"></a>
+                <div class="title" data-localize="home.title">A Boutique Events Company Based in London</div>
+                <div class="content text-center" data-localize="home.content">Our services include event management, venue finding, meetings & conference management and overseas events.</div>
+                <a href="/about" onclick="scrollToSection('#about'); return false;" class="btn-about-us" data-localize="home.button">Learn More</a>
               </div>
             </div>
             <div class="col-md-7">
@@ -46,9 +46,10 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-md-10">
-              <div class="title" data-localize="header.about"></div>
+              <div class="title" data-localize="header.about">About Us</div>
               <hr>
-              <p data-localize="about.content"></p>
+              <p data-localize="about.first_paragraph">Wisteria Club a boutique events company based in London that specialises in exceptional corporate events and private parties. Catering for all budgets, we provide a very personal bespoke service for our clients, ensuring every aspect of the event is created down to the finest detail. Our highly creative, experienced and supportive team work closely with clients to produce spectacular events, both in the UK and abroad.</p>
+              <p data-localize="about.second_paragraph">Our services include event management, venue finding, meetings & conference management and overseas events. Whether it is a meeting, gala dinner or incentive, we can take the stress out of your events and save you time, money and energy.</p>
             </div>
           </div>
         </div>
@@ -56,50 +57,50 @@
 
       <section id="services" class="text-center">
         <div class="container">
-          <div class="title" data-localize="header.services"></div>
+          <div class="title" data-localize="header.services">Services</div>
           <hr>
           <div class="row items">
             <div class="col-md">
               <div class="item">
                 <i class="fab fa-connectdevelop"></i>
               </div>
-              <div class="item-name" data-localize="services.hand_painting"></div>
+              <div class="item-name" data-localize="services.hand_painting">Hand Painting</div>
             </div>
             <div class="col-md">
               <div class="item">
                 <i class="fab fa-fort-awesome"></i>
               </div>
-              <div class="item-name" data-localize="services.celebration"></div>
+              <div class="item-name" data-localize="services.celebration">Celebration</div>
             </div>
             <div class="col-md">
               <div class="item">
                 <i class="fas fa-handshake"></i>
               </div>
-              <div class="item-name" data-localize="services.signing"></div>
+              <div class="item-name" data-localize="services.signing">Contract Signing</div>
             </div>
             <div class="col-md">
               <div class="item">
                 <i class="far fa-music"></i>
               </div>
-              <div class="item-name" data-localize="services.performance"></div>
+              <div class="item-name" data-localize="services.performance">Performance</div>
             </div>
             <div class="col-md">
               <div class="item">
                 <i class="fas fa-heart"></i>
               </div>
-              <div class="item-name" data-localize="services.charity"></div>
+              <div class="item-name" data-localize="services.charity">Charity</div>
             </div>
             <div class="col-md">
               <div class="item">
                 <i class="fas fa-users"></i>
               </div>
-              <div class="item-name" data-localize="services.communication"></div>
+              <div class="item-name" data-localize="services.communication">Communication</div>
             </div>
             <div class="col-md">
               <div class="item">
                 <i class="fas fa-trophy-alt"></i>
               </div>
-              <div class="item-name" data-localize="services.planning">></div>
+              <div class="item-name" data-localize="services.planning">Activity Planning</div>
             </div>
           </div>
         </div>
@@ -109,7 +110,7 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-md-12">
-              <div class="title" data-localize="header.gallery"></div>
+              <div class="title" data-localize="header.gallery">Gallery</div>
               <hr>
               <div class="pics">
                 <div class="row">
@@ -127,7 +128,7 @@
                   </div>
                 </div>
               </div>
-              <a href="#" data-localize="gallery.button" class="btn-more"></a>
+              <a href="#" data-localize="gallery.button" class="btn-more">More Pictures</a>
             </div>
           </div>
         </div>
