--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="assets/javascripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/javascripts/language.js"></script>
 
-    <title>Wisteria Club</title>
+    <title data-localize="company">Wisteria Club</title>
   </head>
   <body>
     <header class="header"></header>
