--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8">
 
-    <link href='https://cdn.webfont.youziku.com/webfonts/nomal/2330/45817/5aa2a175f629d91724646a3b.css' rel='stylesheet' type='text/css' />
+    <link href='http://cdn.webfont.youziku.com/webfonts/nomal/2330/45817/5aa2a175f629d91724646a3b.css' rel='stylesheet' type='text/css' />
 
     <link type='text/css' rel="stylesheet" href="assets/stylesheets/custom.css" />
     <link type='text/css' rel="stylesheet" href="assets/stylesheets/bootstrap.min.css" />
     <link type='text/css' rel="stylesheet" href="assets/stylesheets/bootstrap-grid.min.css" />
     <link type='text/css' rel="stylesheet" href="assets/stylesheets/bootstrap-reboot.min.css" />
     <link type='text/css' rel="stylesheet" href="assets/stylesheets/fontawesome-all.min.css" />
+    <link type='text/css' rel="stylesheet" href="assets/stylesheets/lity.min.css" />
 
     <script type="text/javascript" src="assets/javascripts/jquery.min.js"></script>
     <script type="text/javascript" src="assets/javascripts/jquery.localize.min.js"></script>
     <script type="text/javascript" src="assets/javascripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/javascripts/language.js"></script>
+    <script type="text/javascript" src="assets/javascripts/lity.min.js"></script>
 
     <title data-localize="company">Wisteria Club</title>
   </head>
@@ -35,7 +37,7 @@
             </div>
             <div class="col-md-7">
               <div class="text-center">
-                <img src="assets/images/logo.png" alt="" class="logo">
+                <img src="assets/images/webp/logo.webp" alt="" class="logo">
               </div>
             </div>
           </div>
@@ -62,45 +64,45 @@
           <div class="row items">
             <div class="col-md">
               <div class="item">
-                <i class="fab fa-connectdevelop"></i>
+                <div class="icon"><i class="fab fa-connectdevelop"></i></div>
+                <div class="name" data-localize="services.hand_painting">Hand Painting</div>
               </div>
-              <div class="item-name" data-localize="services.hand_painting">Hand Painting</div>
             </div>
             <div class="col-md">
               <div class="item">
-                <i class="fab fa-fort-awesome"></i>
+                <div class="icon"><i class="fab fa-fort-awesome"></i></div>
+                <div class="name" data-localize="services.celebration">Celebration</div>
               </div>
-              <div class="item-name" data-localize="services.celebration">Celebration</div>
             </div>
             <div class="col-md">
               <div class="item">
-                <i class="fas fa-handshake"></i>
+                <div class="icon"><i class="fas fa-handshake"></i></div>
+                <div class="name" data-localize="services.signing">Contract Signing</div>
               </div>
-              <div class="item-name" data-localize="services.signing">Contract Signing</div>
             </div>
             <div class="col-md">
               <div class="item">
-                <i class="far fa-music"></i>
+                <div class="icon"><i class="far fa-music"></i></div>
+                <div class="name" data-localize="services.performance">Performance</div>
               </div>
-              <div class="item-name" data-localize="services.performance">Performance</div>
             </div>
             <div class="col-md">
               <div class="item">
-                <i class="fas fa-heart"></i>
+                <div class="icon"><i class="fas fa-heart"></i></div>
+                <div class="name" data-localize="services.charity">Charity</div>
               </div>
-              <div class="item-name" data-localize="services.charity">Charity</div>
             </div>
             <div class="col-md">
               <div class="item">
-                <i class="fas fa-users"></i>
+                <div class="icon"><i class="fas fa-users"></i></div>
+                <div class="name" data-localize="services.communication">Communication</div>
               </div>
-              <div class="item-name" data-localize="services.communication">Communication</div>
             </div>
             <div class="col-md">
               <div class="item">
-                <i class="fas fa-trophy-alt"></i>
+                <div class="icon"><i class="fas fa-trophy-alt"></i></div>
+                <div class="name" data-localize="services.planning">Activity Planning</div>
               </div>
-              <div class="item-name" data-localize="services.planning">Activity Planning</div>
             </div>
           </div>
         </div>
@@ -115,20 +117,78 @@
               <div class="pics">
                 <div class="row">
                   <div class="col-md-3">
-                    <img src="assets/images/pic_1.jpeg" class="w-100 img-thumbnail" alt="">
+                    <div class="pic">
+                      <img src="assets/images/webp/gallery_1.webp" data-lity data-lity-target="assets/images/webp/gallery_1.webp" class="w-100" alt="">
+                    </div>
                   </div>
                   <div class="col-md-3">
-                    <img src="assets/images/pic_1.jpeg" class="w-100 img-thumbnail" alt="">
+                    <div class="pic">
+                      <img src="assets/images/webp/gallery_2.webp" data-lity data-lity-target="assets/images/webp/gallery_2.webp" class="w-100" alt="">
+                    </div>
                   </div>
                   <div class="col-md-3">
-                    <img src="assets/images/pic_1.jpeg" class="w-100 img-thumbnail" alt="">
+                    <div class="pic">
+                      <img src="assets/images/webp/gallery_3.webp" data-lity data-lity-target="assets/images/webp/gallery_3.webp" class="w-100" alt="">
+                    </div>
                   </div>
                   <div class="col-md-3">
-                    <img src="assets/images/pic_1.jpeg" class="w-100 img-thumbnail" alt="">
+                    <div class="pic">
+                      <img src="assets/images/webp/gallery_4.webp" data-lity data-lity-target="assets/images/webp/gallery_4.webp" class="w-100 up" alt="">
+                    </div>
+                  </div>
+                  <div class="col-md-3">
+                    <div class="pic">
+                      <img src="assets/images/webp/gallery_5.webp" data-lity data-lity-target="assets/images/webp/gallery_5.webp" class="w-100 up" alt="">
+                    </div>
+                  </div>
+                  <div class="col-md-3">
+                    <div class="pic">
+                      <img src="assets/images/webp/gallery_6.webp" data-lity data-lity-target="assets/images/webp/gallery_6.webp" class="w-100" alt="">
+                    </div>
+                  </div>
+                  <div class="col-md-3">
+                    <div class="pic">
+                      <img src="assets/images/webp/gallery_7.webp" data-lity data-lity-target="assets/images/webp/gallery_7.webp" class="w-100" alt="">
+                    </div>
+                  </div>
+                  <div class="col-md-3">
+                    <div class="pic">
+                      <img src="assets/images/webp/gallery_8.webp" data-lity data-lity-target="assets/images/webp/gallery_8.webp" class="w-100 up" alt="">
+                    </div>
+                  </div>
+                  <div class="col-md-3 hide">
+                    <div class="pic">
+                      <img src="assets/images/webp/gallery_9.webp" data-lity data-lity-target="assets/images/webp/gallery_9.webp" class="w-100" alt="">
+                    </div>
+                  </div>
+                  <div class="col-md-3 hide">
+                    <div class="pic">
+                      <img src="assets/images/webp/gallery_10.webp" data-lity data-lity-target="assets/images/webp/gallery_10.webp" class="w-100" alt="">
+                    </div>
+                  </div>
+                  <div class="col-md-3 hide">
+                    <div class="pic">
+                      <img src="assets/images/webp/gallery_11.webp" data-lity data-lity-target="assets/images/webp/gallery_11.webp" class="w-100" alt="">
+                    </div>
+                  </div>
+                  <div class="col-md-3 hide">
+                    <div class="pic">
+                      <img src="assets/images/webp/gallery_12.webp" data-lity data-lity-target="assets/images/webp/gallery_12.webp" class="w-100" alt="">
+                    </div>
+                  </div>
+                  <div class="col-md-3 hide">
+                    <div class="pic">
+                      <img src="assets/images/webp/gallery_13.webp" data-lity data-lity-target="assets/images/webp/gallery_13.webp" class="w-100" alt="">
+                    </div>
+                  </div>
+                  <div class="col-md-3 hide">
+                    <div class="pic">
+                      <img src="assets/images/webp/gallery_14.webp" data-lity data-lity-target="assets/images/webp/gallery_14.webp" class="w-100" alt="">
+                    </div>
                   </div>
                 </div>
               </div>
-              <a href="#" data-localize="gallery.button" class="btn-more">More Pictures</a>
+              <a href="#" data-localize="gallery.button" class="btn-more" onclick="$('.pics .hide').fadeIn(800); $(this).hide(); return false;">More Pictures</a>
             </div>
           </div>
         </div>
