--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="col-md-7">
               <div class="text-center">
-                <img src="assets/images/webp/logo.webp" alt="" class="logo">
+                <img src="assets/images/logo.png" alt="" class="logo">
               </div>
             </div>
           </div>
@@ -119,72 +119,72 @@
                 <div class="row">
                   <div class="col-md-3">
                     <div class="pic">
-                      <img src="assets/images/webp/gallery_1.webp" data-lity data-lity-target="assets/images/webp/gallery_1.webp" class="w-100" alt="">
+                      <img src="assets/images/gallery_1.jpg" data-lity data-lity-target="assets/images/gallery_1.jpg" class="w-100" alt="">
                     </div>
                   </div>
                   <div class="col-md-3">
                     <div class="pic">
-                      <img src="assets/images/webp/gallery_2.webp" data-lity data-lity-target="assets/images/webp/gallery_2.webp" class="w-100" alt="">
+                      <img src="assets/images/gallery_2.jpg" data-lity data-lity-target="assets/images/gallery_2.jpg" class="w-100" alt="">
                     </div>
                   </div>
                   <div class="col-md-3">
                     <div class="pic">
-                      <img src="assets/images/webp/gallery_3.webp" data-lity data-lity-target="assets/images/webp/gallery_3.webp" class="w-100" alt="">
+                      <img src="assets/images/gallery_3.jpg" data-lity data-lity-target="assets/images/gallery_3.jpg" class="w-100" alt="">
                     </div>
                   </div>
                   <div class="col-md-3">
                     <div class="pic">
-                      <img src="assets/images/webp/gallery_4.webp" data-lity data-lity-target="assets/images/webp/gallery_4.webp" class="w-100 up" alt="">
+                      <img src="assets/images/gallery_4.jpg" data-lity data-lity-target="assets/images/gallery_4.jpg" class="w-100 up" alt="">
                     </div>
                   </div>
                   <div class="col-md-3">
                     <div class="pic">
-                      <img src="assets/images/webp/gallery_5.webp" data-lity data-lity-target="assets/images/webp/gallery_5.webp" class="w-100 up" alt="">
+                      <img src="assets/images/gallery_5.jpg" data-lity data-lity-target="assets/images/gallery_5.jpg" class="w-100 up" alt="">
                     </div>
                   </div>
                   <div class="col-md-3">
                     <div class="pic">
-                      <img src="assets/images/webp/gallery_6.webp" data-lity data-lity-target="assets/images/webp/gallery_6.webp" class="w-100" alt="">
+                      <img src="assets/images/gallery_6.jpg" data-lity data-lity-target="assets/images/gallery_6.jpg" class="w-100" alt="">
                     </div>
                   </div>
                   <div class="col-md-3">
                     <div class="pic">
-                      <img src="assets/images/webp/gallery_7.webp" data-lity data-lity-target="assets/images/webp/gallery_7.webp" class="w-100" alt="">
+                      <img src="assets/images/gallery_7.jpg" data-lity data-lity-target="assets/images/gallery_7.jpg" class="w-100" alt="">
                     </div>
                   </div>
                   <div class="col-md-3">
                     <div class="pic">
-                      <img src="assets/images/webp/gallery_8.webp" data-lity data-lity-target="assets/images/webp/gallery_8.webp" class="w-100 up" alt="">
+                      <img src="assets/images/gallery_8.jpg" data-lity data-lity-target="assets/images/gallery_8.jpg" class="w-100 up" alt="">
                     </div>
                   </div>
                   <div class="col-md-3 hide">
                     <div class="pic">
-                      <img src="assets/images/webp/gallery_9.webp" data-lity data-lity-target="assets/images/webp/gallery_9.webp" class="w-100" alt="">
+                      <img src="assets/images/gallery_9.jpg" data-lity data-lity-target="assets/images/gallery_9.jpg" class="w-100" alt="">
                     </div>
                   </div>
                   <div class="col-md-3 hide">
                     <div class="pic">
-                      <img src="assets/images/webp/gallery_10.webp" data-lity data-lity-target="assets/images/webp/gallery_10.webp" class="w-100" alt="">
+                      <img src="assets/images/gallery_10.jpg" data-lity data-lity-target="assets/images/gallery_10.jpg" class="w-100" alt="">
                     </div>
                   </div>
                   <div class="col-md-3 hide">
                     <div class="pic">
-                      <img src="assets/images/webp/gallery_11.webp" data-lity data-lity-target="assets/images/webp/gallery_11.webp" class="w-100" alt="">
+                      <img src="assets/images/gallery_11.jpg" data-lity data-lity-target="assets/images/gallery_11.jpg" class="w-100" alt="">
                     </div>
                   </div>
                   <div class="col-md-3 hide">
                     <div class="pic">
-                      <img src="assets/images/webp/gallery_12.webp" data-lity data-lity-target="assets/images/webp/gallery_12.webp" class="w-100" alt="">
+                      <img src="assets/images/gallery_12.jpg" data-lity data-lity-target="assets/images/gallery_12.jpg" class="w-100" alt="">
                     </div>
                   </div>
                   <div class="col-md-3 hide">
                     <div class="pic">
-                      <img src="assets/images/webp/gallery_13.webp" data-lity data-lity-target="assets/images/webp/gallery_13.webp" class="w-100" alt="">
+                      <img src="assets/images/gallery_13.jpg" data-lity data-lity-target="assets/images/gallery_13.jpg" class="w-100" alt="">
                     </div>
                   </div>
                   <div class="col-md-3 hide">
                     <div class="pic">
-                      <img src="assets/images/webp/gallery_14.webp" data-lity data-lity-target="assets/images/webp/gallery_14.webp" class="w-100" alt="">
+                      <img src="assets/images/gallery_14.jpg" data-lity data-lity-target="assets/images/gallery_14.jpg" class="w-100" alt="">
                     </div>
                   </div>
                 </div>
