--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
 
     <!-- load logo css stylesheet -->
-    <link href='https://cdn.webfont.youziku.com/webfonts/nomal/2330/45817/5aa2a175f629d91724646a3b.css' rel='stylesheet' type='text/css' />
+    <link href='http://cdn.webfont.youziku.com/webfonts/nomal/90514/45817/5ae128fff629d81b985ac8b8.css' rel='stylesheet' type='text/css' />
 
     <!-- load third-party css files -->
     <link type='text/css' rel="stylesheet" href="assets/stylesheets/custom.css" />
