--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             <div class="col-md-3 member text-center">
               <div class="avatar">
                 <div class="layer" role="button" data-toggle="modal" data-target="#modal_1"></div>
-                <img src="assets/images/avatar_1.jpg" alt="" class="img-thumbnail">
+                <img src="assets/images/team/jingjing_ma.jpg" alt="" class="img-thumbnail">
               </div>
               <div class="name" data-localize="team.names.first"></div>
               <div class="position" data-localize="team.positions.first"></div>
@@ -247,7 +247,7 @@
             <div class="col-md-3 member">
               <div class="avatar">
                 <div class="layer" role="button" data-toggle="modal" data-target="#modal_2"></div>
-                <img src="assets/images/avatar_2.jpg" alt="" class="img-thumbnail">
+                <img src="assets/images/team/ningjing_gao.jpg" alt="" class="img-thumbnail">
               </div>
               <div class="name" data-localize="team.names.second"></div>
               <div class="position" data-localize="team.positions.second"></div>
@@ -255,7 +255,7 @@
             <div class="col-md-3 member">
               <div class="avatar">
                 <div class="layer" role="button" data-toggle="modal" data-target="#modal_3"></div>
-                <img src="assets/images/avatar_3.jpg" alt="" class="img-thumbnail">
+                <img src="assets/images/team/kathy_wong.jpg" alt="" class="img-thumbnail">
               </div>
               <div class="name" data-localize="team.names.third"></div>
               <div class="position" data-localize="team.positions.third"></div>
@@ -263,7 +263,7 @@
             <div class="col-md-3 member">
               <div class="avatar">
                 <div class="layer" role="button" data-toggle="modal" data-target="#modal_4"></div>
-                <img src="assets/images/avatar_4.jpg" alt="" class="img-thumbnail">
+                <img src="assets/images/team/zhiyan_yu.jpg" alt="" class="img-thumbnail">
               </div>
               <div class="name" data-localize="team.names.forth"></div>
               <div class="position" data-localize="team.positions.forth"></div>
@@ -281,8 +281,9 @@
             <h5 class="modal-title" data-localize="team.names.first"></h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           </div>
-          <div class="modal-body" data-localize="team.descs.first">
-
+          <div class="modal-body">
+            <h6 data-localize="team.positions.first"></h6>
+            <p data-localize="team.descs.first"></p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -299,8 +300,9 @@
             <h5 class="modal-title" data-localize="team.names.second"></h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           </div>
-          <div class="modal-body" data-localize="team.descs.second">
-
+          <div class="modal-body">
+            <h6 data-localize="team.positions.second"></h6>
+            <p data-localize="team.descs.second"></p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -317,8 +319,9 @@
             <h5 class="modal-title" data-localize="team.names.third"></h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           </div>
-          <div class="modal-body" data-localize="team.descs.third">
-
+          <div class="modal-body">
+            <h6 data-localize="team.positions.third"></h6>
+            <p data-localize="team.descs.third"></p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -335,8 +338,9 @@
             <h5 class="modal-title" data-localize="team.names.forth"></h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           </div>
-          <div class="modal-body" data-localize="team.descs.forth">
-
+          <div class="modal-body">
+            <h6 data-localize="team.positions.forth"></h6>
+            <p data-localize="team.descs.forth"></p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
